css/style.css
* {
    margin: 0;
    padding: 0;
}

body {
    background-image: url(../img/manila.jpg);
    -webkit-background-size: cover;
    background-size: cover;
    background-position: center center;
    height: 100vh;
    font-family: sans-serif;
    background-repeat: no-repeat;
}

a:link, a:focus, a:active, a:visited {
    color: black;
    text-decoration: none;
}

.wrapper {
    width: 860px;
    margin: 0 auto;
}

.wrapper ul {
    list-style: none;
    margin-top: 2%;
    z-index: 1000;
}

.wrapper ul li {
    background: wheat;
    width: 110px;
    border: 2px solid white;
    height: 45px;
    line-height: 50px;
    text-align: center;
    float: left;
    color: black;
    font-size: 25x;
    position: relative;
    font-weight:900;
}

.wrapper ul li:hover {
    background: lightskyblue;
}

.wrapper ul ul {
    display: none;
    margin-left: 170x;
    top: 0;
    position: absolute;
}

.wrapper ul li:hover > ul {
    display: block;
    position: relative;
}

.wrapper p {
    float: left;
    font-size: 35px;
    margin: 5px 10px;
    font-family:sans-serif;
    font-weight:bolder;
    color: white;
}

#footer {
    position: fixed;
    margin-bottom: 10px;
    bottom: 0;
    width: 100%;
    height: 20px;
    text-align: center;
    background: wheat;
    font-family: sans-serif;
}

.me {
    float:left;
    margin-left: 15px 15px 0px 15px;
    position: relative;
    top: 175px;
    background-color: wheat;
    color: black;
    padding: 10px 10px;
    font-family: sans-serif;
    font-size: 15;
    line-height: 1.5;
    width: 700px;
    height: 75px;
}

img {
    float:left;
    background-color: white;
    padding: 5px;
    margin-right: 25px;
}

.aboutme {
    float:right;
}

.sinigang {
    clear: both;
    float:left;
    margin-left: 15px 15px 0px 15px;
    position: relative;
    top: 50px;
    right: -350px;
    background-color: wheat;
    color: black;
    padding: 10px 10px;
    font-family: sans-serif;
    font-size: 15;
    line-height: 1.5;
    width: 700px;
    height: 535px;
}

.intro {
    position: absolute;
    font-size: 25px;
    padding: 10px 10px;
    width: 1000px;
    height: 50px;
    right: 125px;
    top: 75px;
    color: lightyellow;
}

.sisig {
    clear: both;
    float:left;
    margin-left: 15px 15px 0px 15px;
    position: relative;
    top: 50px;
    right: -350px;
    background-color: wheat;
    color: black;
    padding: 10px 10px;
    font-family: sans-serif;
    font-size: 15;
    line-height: 1.5;
    width: 650px;
    height: 535px;
}

.spaghetti {
    clear: both;
    float:left;
    margin-left: 15px 15px 0px 15px;
    position: relative;
    top: 50px;
    right: -350px;
    background-color: wheat;
    color: black;
    padding: 10px 10px;
    font-family: sans-serif;
    font-size: 15;
    line-height: 1.5;
    width: 500px;
    height: 500px;
}

